--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-handlebars": "^7.0.7",
     "express-session": "^1.17.3",
     "handlebars": "^4.7.7",
+    "luxon": "^3.3.0",
     "mysql2": "^3.3.0",
     "sequelize": "^6.31.1"
   }
