--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "handlebars": "^4.7.7",
     "luxon": "^3.3.0",
     "mysql2": "^3.3.0",
-    "sequelize": "^6.31.1"
+    "sequelize": "^6.31.1",
+    "uuid": "8.3.2"
   }
 }
